$Id: History,v 1.16 2002-11-08 01:36:14 gum Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

07 November 02: P. Gumplinger (xrays-V04-01-00)
- G4Scintillation now allows for fast and slow components. Scintillation properties are stored
  with the material and retrieved with GetConstProperty.

16 may 02: P. Gumplinger (xrays-V04-00-04)
- G4Scintillation now inherits from G4VRestDiscreteProcess changes made accordingly
  G4Scintillation/G4Cerenkov now only suspend the track when it is still 'fAlive'

09 may 02: P. Gumplinger (xrays-V04-00-03)
- changed method 'DoIt' in G4Scintillation so that origin of optical photons is
  the PostStepPoint location in case energy is lost to the medium by a neutral
  particle.

09 may 02: P. Gumplinger (xrays-V04-00-02)
- changed method 'IsApplicable' for G4Scintillation to return .false. when it 
  is called for an optical photon.

28 mar 02: G. Cosmo (xrays-V04-00-01)
- fixed endl/G4endl compilation problem in G4VXTRenergyLoss.cc ...

22 mar 02: V. Grichine (xrays-V04-00-00)
- new classes (G4VXTRenergyLoss,G4GammaXTRadiator and G4RegularXTRadiator) were
  added for the description of X-ray transition radiation as continuous process.
     
12 nov 01: mma (xrays-V03-02-02)